deploy/03-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: attendance
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: attendance-management
spec:
  # StatefulSetのserviceNameと合わせる
  clusterIP: None
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      protocol: TCP
  selector:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/component: database
